# stravaV10

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CodeCoverage.cmake  LICENSE  Makefile.files  README.md  ant.c  ant.h  app_config.h  assert_wrapper.h  backlighting.h  ble.c  ble.files  buttons_att.c  buttons_att.h  custom_board.h  custom_board_v1.h  custom_board_v2.h  custom_board_v3.h  fec.c  fec.h  glasses.h  helper.c  helper.h  i2c.c  i2c.h  main.c  main.cpp  math_wrapper.h  math_wrapper_arm.h  mk64f_parser.c  mk64f_parser.h  neopixel.c  neopixel.h  notifications.c  notifications.h  ozone.jdebug  segger_wrapper.c  (+10 more)
.circleci/: config.yml
.circleci/images/: Dockerfile
AP/: README.md  main.c
MMD/: JLINK_MONITOR.c  JLINK_MONITOR.h  README.md
STL/: Bottom12.stl  Readme.md  Top12.stl
TDD/: GPX_simu.csv  GPX_simu_nancy.csv  GUI_connector.cpp  Makefile.tdd  Model_tdd.cpp  Model_tdd.h  Readme.md  Simulator.cpp  Simulator.h  ccmake.sh  docker.sh  main_tdd.cpp  main_tdd.h  main_tdd.h.in  math_wrapper_tdd.h  millis_tdd.c  order1_filter_tdd.c  segger_wrapper_tdd.h  task_manager_wrapper_tdd.h  unit_testing.cpp  unit_testing.hpp
TDD/DB/: 4NWKZ#KN.OAI  4NX5R#KN.N8K  4NY4R#KN.M3X  4NY6P#KN.NOI  4NYGD#KN.NAB  4NYIZ#KN.NJ4  7Y56J#AT.1GP  7Y574#AT.1FE  7Y60O#AS.XQZ  7Y6SI#AT.22Q  7Y73A#AS.ZUK  7Y8D3#AS.ZV0  893KZ#B2.QYW  893PB#B2.LC6  894N9#B2.TQO  894NR#B2.TM6  894NT#B2.TM2  894RO#B2.NW0  894ZP#B2.UUN  89537#B2.XNU  8958I#B2.JX7  895C9#B2.XOS  895GF#B2.RNO  895GT#B2.RNI  895HB#B2.SEG  895JY#B2.SG0  895PM#B2.SVK  896ON#B2.XL8  896R9#B2.XLZ  896TX#B2.Q9A  8972X#B3.0AT  8973S#B2.R5T  8974C#B2.S6F  897JB#B2.Y8B  897JJ#B2.Y81  897QC#B2.WTI  897QE#B2.WTK  897XA#B2.X3B  897ZN#B2.YA5  89858#B2.X6D  (+102 more)
TDD/TDD/: GUI_connector.cpp
TDD/drivers/: ant_tdd.c  drv_ws2812.c  gpio.h  gpio_tdd.c  gpio_tdd.cpp  hardfault.h  ls027.h  ls027_tdd.cpp  neopixel.h  neopixel_tdd.c  uart.h  uart_tdd.c  uart_tdd.h
TDD/logger/: tdd_logger.c  tdd_logger.h
TDD/nordic/: app_scheduler.c  app_scheduler.h  ble_api6.c  ble_api_base.h  boards.h  hardfault_genhf.c  hardfault_genhf.h  i2c.h  i2c_scheduler.cpp  nordic_common.h  nrf.h  nrf_bootloader_info.h  nrf_delay.h  nrf_drv_gpiote.h  nrf_drv_spi.h  nrf_gpio.c  nrf_gpio.h  platform.c  sdk_config.h  usb_cdc.c
TDD/scheduler/: task_scheduler.c  task_scheduler.h
TDD/sd/: sd_functions.cpp  sd_functions.h  sd_hal.c  sd_hal.h
TDD/sensors/: GPSMGMT.cpp  GPSMGMT.h  MS5637.cpp  MS5637.h  STC3100.cpp  STC3100.h  VEML6075.cpp  bme280.c  fram.c  fxos.cpp  fxos.h
TDD/sys/: GUI_connector.cpp  GUI_connector.h
TDD/timer/: build.bat  build.sh  main.c  timer.c  timer.h
TDD/vue/: Vue_TDD.cpp  Vue_TDD.h
TDDW/: execinfo.h  start_cmake.bat  unistd.h
dfu/: Readme.md  dfu_public_key.c  main.c
dfu/armgcc/: Makefile  Makefile.local  open_bootloader_gcc_nrf52.ld
dfu/config/: sdk_config.h
drivers/: backlighting.c  backlighting.h  diskio_blkdev.c  drv_ws2812.c  drv_ws2812.h  gpio.c  gpio.h  i2c.c  i2c.h  neopixel.c  nrf_block_dev_qspi.c  nrfx_qspi.c  spi.c  spi.h  uart.c  uart.h  ws2812B_commands.h
drivers/lcd/: ls027.c  ls027.h  ls027_splash.h
hw_test/: main.c
hw_test/armgcc/: Makefile
hw_test/config/: sdk_config.h  sdk_config_rtt.h
jumper/: jumper.json
libraries/AdafruitGFX/: Adafruit_GFX.cpp  Adafruit_GFX.h  Print.cpp  Print.h  Printable.h  avr_functions.h  fontconvert.rar  glcdfont.c  pgmspace.h
libraries/AltiBaro/: AltiBaro.cpp  AltiBaro.h
libraries/GlobalTop/: EPONmeaPacket.cpp  EPONmeaPacket.h  EpoDefinitions.h  LocusCommands.h  MTK.cpp  MTK.h
libraries/IntelliScreen/: IntelliScreen.cpp  IntelliScreen.h
libraries/SST/: app_sdcard.c  mt25.c  nor_defines.h  sst26.c  sst26.h  sst26_hal.c  sst26_hal.h
libraries/TinyGPSPlus/: TinyGPS++.cpp  TinyGPS++.h
libraries/VParser/: VParser.cpp  VParser.h
libraries/ble_komoot_c/: ble_komoot_c.c  ble_komoot_c.h  komoot_icons.h
libraries/filters/: order1_filter.c  order1_filter.h
libraries/fitLib/: encode_lib.c  encode_lib.h  fit.c  fit.h  fit_config.h  fit_convert.c  fit_convert.h  fit_crc.c  fit_crc.h  fit_example.c  fit_example.h  fit_product.h
libraries/hardfault/: hardfault_implementation.c
libraries/jscope/: JScope.cpp  JScope.h
libraries/kalman/: UDMatrix.cpp  UDMatrix.h  kalman_ext.cpp  kalman_ext.h
libraries/komoot/: komoot_nav.c  komoot_nav.h
libraries/rtt/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
libraries/sdcard/: app_sdcard.c  app_sdcard.h
libraries/spiffs/: spiffs_config.h
libraries/sysview/: Global.h  SEGGER.h  SEGGER_SYSVIEW.c  SEGGER_SYSVIEW.h  SEGGER_SYSVIEW_Conf.h  SEGGER_SYSVIEW_ConfDefaults.h  SEGGER_SYSVIEW_Config_NoOS.c  SEGGER_SYSVIEW_Int.h  SYSVIEW_stravaV10.txt
libraries/task_manager/: task_manager.c  task_manager.h
libraries/utils/: RingBuffer.h  WString.cpp  WString.h  millis.c  millis.h  ring_buffer.h  utils.c  utils.h
rf/: ant.c  ant.h  ant_device_manager.cpp  ant_device_manager.h  app_ble_central.c  app_ble_peripheral.c  app_packets_handler.c  app_packets_handler.h  ble.c  ble_api5.c  ble_api6.c  ble_api_base.h  bsc.c  bsc.h  fec.c  fec.h  glasses.c  glasses.h  hrm.c  hrm.h  l_protocol.h  lezyne_protocol.h
source/: Model.cpp  Model.h  Task.hpp  g_structs.c  g_structs.h  main.old  parameters.h
source/display/: SegmentManager.cpp  SegmentManager.h  Zoom.cpp  Zoom.h  notifications.c  notifications.h
source/model/: Attitude.cpp  Attitude.h  BinnedData.h  Boucle.cpp  Boucle.h  BoucleCRS.cpp  BoucleCRS.h  BoucleFEC.cpp  BoucleFEC.h  BoucleInterface.h  BoucleZwift.h  Locator.cpp  Locator.h  PowerZone.cpp  PowerZone.h  RRZone.cpp  RRZone.h  Sensor.h  SufferScore.cpp  SufferScore.h  UData.h  UserSettings.cpp  UserSettings.h
source/parsers/: Base64.h  PolyLine.h  SequenceUnpacker.h  file_parser.cpp  file_parser.h  inseg_handler.cpp  inseg_handler.h  mk64f_parser.h
source/routes/: ListePoints.cpp  ListePoints.h  Parcours.cpp  Parcours.h  Points.cpp  Points.h  Segment.cpp  Segment.h  Vecteur.cpp  Vecteur.h
source/sd/: nor.c  (+10 more)
zpm/: GpxService.js  LNS.js  LNS_test.js  Readme.md  getGPX.js  gpx_convert.js  package.json
(+91 files in other folders)
